[package]
name = "tunly"
version = "0.1.0"
edition = "2021"
autobins = false


[[bin]]
name = "tunly-moq-client"
path = "src/bin/tunly-moq-client.rs"

[[bin]]
name = "tunly-moq-server"
path = "src/bin/tunly-moq-server.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace", "normalize-path"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
thiserror = "1"
urlencoding = "2"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-util = { version = "0.7", features = ["codec"] }
http = "1"
async-trait = "0.1"
url = "2"
moq-native = { git = "https://github.com/kixelated/moq", package = "moq-native" }
moq-lite = { git = "https://github.com/kixelated/moq", package = "moq-lite" }
