[package]
name = "tunly"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
autobins = false


[[bin]]
name = "tunly-client"
path = "src/bin/tunly-client.rs"

[[bin]]
name = "tunly-server"
path = "src/bin/tunly-server.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "normalize-path"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
thiserror = "2"
urlencoding = "2"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
openssl = { version = "0.10", features = ["vendored"] }

# Extreme optimization profile for release builds
# This will make binaries MUCH smaller but takes longer to compile
[profile.release]
# Optimize for size (z = most aggressive size optimization)
opt-level = "z"

# Enable Link Time Optimization (fat = most aggressive, slower compile)
lto = "fat"

# Single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1

# Strip symbols from binary (smaller size, no debug info)
strip = true

# Abort on panic instead of unwinding (smaller binary)
panic = "abort"

# Additional size optimizations for all dependencies
[profile.release.package."*"]
opt-level = "z"
strip = true
