[package]
name = "tunly"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
autobins = false


[[bin]]
name = "tunly-client"
path = "src/bin/tunly-client.rs"

[[bin]]
name = "tunly-server"
path = "src/bin/tunly-server.rs"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "normalize-path"] }
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive", "env"] }
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["http1", "http2", "client", "server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
flate2 = "1.1.9"
prometheus = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
urlencoding = "2.1.3"
rand = "0.9.2"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }

[features]
http2 = []

# Platform-specific TLS backends
[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate", "native-tls", "http2"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.13.1", features = ["json", "gzip", "brotli", "deflate", "http2"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
openssl = { version = "0.10.75", features = ["vendored"] }

# Extreme optimization profile for release builds
# This will make binaries MUCH smaller but takes longer to compile
[profile.release]
# Optimize for size (z = most aggressive size optimization)
opt-level = "z"

# Enable Link Time Optimization (fat = most aggressive, slower compile)
lto = "fat"

# Single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1

# Strip symbols from binary (smaller size, no debug info)
strip = true

# Abort on panic instead of unwinding (smaller binary)
panic = "abort"

# Additional size optimizations for all dependencies
[profile.release.package."*"]
opt-level = "z"
strip = true

[dev-dependencies]
axum-test = "18.7.0"
